# mujitask

./: .env.example  .gitignore  AGENT.MD  AGENTS.md  CLAUDE.md  README.md  alembic.ini  alembic_fact.ini  package-lock.json  package.json  pyproject.toml
.github/workflows/: validate-skills.yml
.platform/: model-rules.yaml  platform-manifest.yaml
alembic/: env.py
alembic/versions/: 20260412_0001_execution_control.py  20260412_0001_phase1_execution_control.py  20260421_0002_tk_fact_database.py  20260422_0003_api_worker_job.py  20260422_0004_fastmoss_cookie_cache.py  20260509_0005_runtime_result_status.py  20260528_0006_video_metric_snapshots.py  20260714_0007_amazon_product_facts.py  20260723_0008_tk_durable_media_references.py
alembic_fact/: env.py
alembic_fact/versions/: 20260714_0007_amazon_product_facts.py
config/: browser_profiles.example.json  browser_profiles.json
config/deployment/: Local MinIO (HTTP 9000).cyberduckprofile
contracts/: README.md  skill_contract.md  skill_spec.schema.json
contracts/agents/: business-agent-bindings.yaml
contracts/codex/: task-routing.yaml
contracts/facts/: durable-business-object-storage.yaml  product-fact-collection.yaml
contracts/fields/: feishu-amazon-products.yaml  feishu-tk-competitor.yaml  feishu-tk-influencer-pool.yaml  feishu-tk-selection.yaml
contracts/harness/: architecture-ownership.yaml  code-roadmap.yaml
contracts/states/: amazon-product-collection-status.yaml  tk-competitor-influencer-search-status.yaml  tk-competitor-product-status.yaml
contracts/workflow/: refresh_amazon_product_row_by_asin.yaml  refresh_competitor_row_by_url.yaml  refresh_current_amazon_product_table.yaml  refresh_current_competitor_table.yaml  search_keyword_competitor_products.yaml  search_keyword_selection_products.yaml  sync_tk_influencer_pool.yaml  tiktok_fastmoss_product_ingest.yaml  tiktok_influencer_outreach_sync.yaml
docs/: README.md
docs/arch/: README.md  current-system-architecture-design.md  data-collection-strategy-design.md  database-architecture-design.md  entry-output-contract-design.md  fact-db-schema-design.md  feishu-table-adapter-projection-contract.md  future-tk-comprehensive-table-design.md  handler-contract-design.md  handler-contract-summary.md  interactive-staged-workflow-runtime-design.md  migration-state.md  module-ownership-contract.md  project-architecture-contract.md  project-structure-contract.md  real-migration-checklist.md  refactor-refresh-current-competitor-table.md  refactor-runtime-store-phase-2.md  refactor-search-keyword-competitor-products.md  refactor-search-keyword-selection-products.md  refactor-sync-tk-influencer-pool.md  refactor-tiktok-fastmoss-product-ingest.md  rewrite-acceptance-contract.md  runtime-control-plane-contract.md  runtime-db-schema-design.md  runtime-task-request-table-design.md  storage-architecture-design.md  system-architecture-design.md  target-project-architecture-contract.md  workflow-amazon-product-detail-design.md  workflow-competitor-table-design.md  workflow-design-guidelines.md  workflow-implementation-patterns.md  workflow-influencer-outreach-design.md  workflow-influencer-pool-sync-design.md  workflow-redesign-review.md  workflow-selection-analysis-design.md  workflow-selection-table-design.md  (+1 more)
docs/business/: 01-需求文档.md  (+39 more)
examples/: workflow_draft.review-only.yaml
prompts/: generate_skill_spec.md
tests/: conftest.py  test_achieve_acceptance_harness.py  test_agent.py  test_amazon_fact_migration_routing.py  test_amazon_fact_schema.py  test_amazon_fact_store.py  test_amazon_openclaw_skill.py  test_amazon_product_browser_fetch_handler.py  test_amazon_product_contracts.py  test_amazon_product_fact_upsert_handler.py  test_amazon_product_page.py  test_amazon_product_row_persist.py  test_architecture_delta_gate.py  test_architecture_ownership.py  test_artifact_sync.py  test_browser_chrome_cdp_autostart.py  test_browser_fallback_boundary.py  test_browser_page_primitives.py  test_business_agent_isolation_contract.py  test_child_runner.py  test_codex_root_task_routing.py  test_competitor_row_refresh_handler.py  test_competitor_row_refresh_package_structure.py  test_completion_claim_gate.py  test_config.py  test_contract_pack.py  test_control_plane_hotspot_structure.py  test_current_system_architecture_contract.py  test_durable_business_object_storage_contract.py  test_entity_service.py  test_execution_supervisor.py  test_execution_supervisor_runtime.py  test_fact_bundle_upsert_handler.py  test_facts_persistence_structure.py  test_fallback_required_runtime_semantics.py  test_fastmoss_cookie_cache.py  test_fastmoss_creator_fetch_handler.py  test_fastmoss_fact_mappers.py  test_fastmoss_product_flow.py  test_fastmoss_product_sales_snapshot_task.py  (+84 more)
tools/: render_skill.py  validate_skill.py
(+795 files in other folders)
