[project]
name = "automation-business-scaffold"
version = "0.1.0"
description = "Business scaffold for building browser automation workflows on top of automation-framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "automation-framework @ git+http://192.168.88.200:8080/work/automation-framework.git@55e8223a92f562f4053006c55e66fe5491c9be61",
  "requests>=2.32.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
automation-business-scaffold-agent = "automation_business_scaffold.agent:main"
automation-business-scaffold-run = "automation_business_scaffold.cli:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "PyYAML>=6.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
