[project]
name = "automation-business-scaffold"
version = "3.3.6"
description = "Business scaffold for building browser automation workflows on top of automation-framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "automation-framework @ git+https://github.com/knighterrantsky/automation-framework.git@v0.3.6",
  "alembic>=1.14.0",
  "minio>=7.2.18",
  "psycopg[binary]>=3.2.1",
  "requests>=2.32.0",
  "SQLAlchemy>=2.0.36",
  "uvicorn>=0.35.0",
]

[project.scripts]
automation-business-scaffold-agent = "automation_business_scaffold.agent:main"
automation-business-scaffold-api-worker = "automation_business_scaffold.api_worker_daemon:main"
automation-business-scaffold-browser-runloop = "automation_business_scaffold.browser_runloop:main"
automation-business-scaffold-executor = "automation_business_scaffold.executor_daemon:main"
automation-business-scaffold-outbox-dispatcher = "automation_business_scaffold.outbox_dispatcher:main"
automation-business-scaffold-run = "automation_business_scaffold.cli:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "PyYAML>=6.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automation_business_scaffold = ["infrastructure/fastmoss/*.mjs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
