[project]
name = "automation-business-scaffold"
version = "3.3.6"
description = "Business scaffold for building browser automation workflows on top of automation-framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "automation-framework[captcha] @ git+https://github.com/knighterrantsky/automation-framework.git@v0.3.10",
  "alembic>=1.14.0",
  "minio>=7.2.18",
  "psycopg[binary]>=3.2.1",
  "requests>=2.32.0",
  "SQLAlchemy>=2.0.36",
  "uvicorn>=0.35.0",
]

[project.scripts]
automation-business-scaffold-agent = "automation_business_scaffold.apps.rpc_agent.server:main"
automation-business-scaffold-api-worker = "automation_business_scaffold.apps.daemons.api_worker.main:main"
automation-business-scaffold-browser-runloop = "automation_business_scaffold.apps.daemons.browser_worker.main:main"
automation-business-scaffold-executor = "automation_business_scaffold.apps.daemons.executor.main:main"
automation-business-scaffold-outbox-dispatcher = "automation_business_scaffold.apps.daemons.outbox.main:main"
automation-business-scaffold-run = "automation_business_scaffold.apps.cli.main:main"
automation-business-scaffold-watchdog = "automation_business_scaffold.apps.daemons.watchdog.main:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "PyYAML>=6.0",
  "ruff>=0.12.0",
]

[dependency-groups]
# Keep this in sync with [project.optional-dependencies].dev. uv includes the
# default dev group for `uv run`, which keeps bare `uv run pytest` inside .venv
# instead of falling through to a global pytest on PATH.
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "PyYAML>=6.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automation_business_scaffold = [
  "contracts/workflow/*.yaml",
  "infrastructure/fastmoss/*.mjs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
